feat: Implement user password change functionality with new API endpoint, UI in profile form, and a dedicated verification script.

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -628,6 +628,14 @@
                 "upload_failed": "Image upload failed",
                 "update_failed": "Failed to update profile"
             }
+        },
+        "password": {
+            "title": "Change Password",
+            "current": "Current Password",
+            "new": "New Password",
+            "confirm": "Confirm New Password",
+            "success": "Password changed successfully!",
+            "error_mismatch": "New passwords do not match"
         }
     },
     "workshop": {
